tests/ui/discord-frontend/entity_macro/expected_square_brackets_10.stderr
error: expected square brackets
  --> tests/ui/discord-frontend/entity_macro/expected_square_brackets_10.rs:38:13
   |
LL |     extra = core
   |             ^^^^

error: aborting due to 1 previous error

